# dmapf-study

./: CMakeLists.txt  README.md  package.xml
docs/: workflow.graphml
include/dmapf/: clingo_wrap.h  color.h  hungarian.h  utility.h
msg/: Aim.msg  Area.msg  Areas.msg  Cross.msg  Dist.msg  Move.msg  Next.msg  Plan.msg  Position.msg  Step.msg  Target.msg  Tier.msg  Track.msg  Transit.msg
scraps/: abstract.lp  abstract.py  asprilo-cent.lp  asprilo-dist-1.lp  asprilo-dist-2.lp  dump.py  ex.lp  migrate.lp  migrate.py  migrate2.lp  migrate3.lp  migrate4.lp  mission-M.lp  movement.lp  movement.py  movement2.lp  movement3.lp  noex.lp  test.cpp
scraps/new/: asprilo-cent.lp  asprilo-dist-1.lp  asprilo-dist-2.lp  asprilo-dist-3.lp  asprilo-dist-4.lp  empty-32-32.lp  migrate-1.lp  migrate-2.lp  migrate.lp  singleshot.lp
scripts/: job-multi.sh  job-roscore.sh  movement.lp  viz.lp
solvers/ASP/: movement.lp
src/: abstract.lp  d2od.cpp  divider.lp  gendiv.cpp  hungarian.cpp  lp2map.cpp  lp2yaml.cpp  map2lp.cpp  migrate.lp  probmod.cpp  solver.cpp
srv/: Abstract.srv  Aggregate.srv  Migrate.srv
tests/: gendiv.sh  probmod.sh  run.sh
tests/n_solvers/: lak303d_r200_s12_i1.txt  lak303d_r200_s12_i10.txt  lak303d_r200_s12_i2.txt  lak303d_r200_s12_i3.txt  lak303d_r200_s12_i4.txt  lak303d_r200_s12_i5.txt  lak303d_r200_s12_i6.txt  lak303d_r200_s12_i7.txt  lak303d_r200_s12_i8.txt  lak303d_r200_s12_i9.txt  lak303d_r200_s16_i1.txt  lak303d_r200_s16_i10.txt  lak303d_r200_s16_i2.txt  lak303d_r200_s16_i3.txt  lak303d_r200_s16_i4.txt  lak303d_r200_s16_i5.txt  lak303d_r200_s16_i6.txt  lak303d_r200_s16_i7.txt  lak303d_r200_s16_i8.txt  lak303d_r200_s16_i9.txt  lak303d_r200_s20_i1.txt  lak303d_r200_s20_i10.txt  lak303d_r200_s20_i2.txt  lak303d_r200_s20_i3.txt  lak303d_r200_s20_i4.txt  lak303d_r200_s20_i5.txt  lak303d_r200_s20_i6.txt  lak303d_r200_s20_i7.txt  lak303d_r200_s20_i8.txt  lak303d_r200_s20_i9.txt  lak303d_r200_s24_i1.txt  lak303d_r200_s24_i10.txt  lak303d_r200_s24_i2.txt  lak303d_r200_s24_i3.txt  lak303d_r200_s24_i4.txt  lak303d_r200_s24_i5.txt  lak303d_r200_s24_i6.txt  lak303d_r200_s24_i7.txt  lak303d_r200_s24_i8.txt  lak303d_r200_s24_i9.txt  (+202 more)
tools/: extract_stats.py  qc.py  time_in_minutes.py  time_in_ms.py
